# cohirf

./: .gitignore  LICENSE  README.md  batch-dev.ipynb  characteristics.csv  check_interactive_run.ipynb  create_scripts_gaussian_random.ipynb  create_scripts_gaussian_random_tgcc.ipynb  create_scripts_gaussian_tgcc.ipynb  create_scripts_openml_tasks_tgcc.ipynb  create_scripts_openml_tgcc.ipynb  create_scripts_time.ipynb  create_scripts_time_tgcc.ipynb  dataset_characteristics.ipynb  delele_runs.py  dev.ipynb  draw_graph.ipynb  environment.yml  estimator.py  interactive_run.ipynb  iris_dataet.ipynb  new_cohirf_ref.ipynb  new_datasets_ids  package-list.txt  pyproject.toml  requirements.txt  run_blob_time.sh  run_blob_time_test.sh  run_hypercube.sh  run_hypercube_test.sh  run_real.sh  run_real_test.sh  slurm_template.sbatch  sphere_radius.ipynb  start_postgresql.sh  upload_datasets.ipynb  wbms_implementation.ipynb
analyze_results/: analyze_runs_classif.ipynb  analyze_runs_classif_huge.ipynb  analyze_runs_classif_time.ipynb  analyze_runs_classif_time_tgcc.ipynb  analyze_runs_clusters.ipynb  analyze_runs_csv.ipynb  analyze_runs_gaussian.ipynb  analyze_runs_gaussian_random.ipynb  analyze_runs_gaussian_random_tgcc.ipynb  analyze_runs_gaussian_tgcc.ipynb  analyze_runs_gnoise_v2_tgcc.ipynb  analyze_runs_openml.ipynb  analyze_runs_openml_task_tgcc.ipynb  analyze_runs_openml_tgcc.ipynb  analyze_runs_openml_v2.ipynb  analyze_runs_openml_v2_tgcc.ipynb  analyze_runs_openml_v2_tgcc_ceremade.ipynb  analyze_runs_samples.ipynb  analyze_runs_scale_features_non_informative.ipynb  analyze_runs_smd.ipynb  analyze_runs_spheres.ipynb  delete_runs.ipynb  delete_runs_tgcc.ipynb  df_openml_tgcc.csv  draw_graph.ipynb
analyze_results/archive/: analyze_runs_classif.ipynb  analyze_runs_classif_huge.ipynb  analyze_runs_classif_outlier.ipynb  analyze_runs_openml.ipynb  analyze_runs_scale_features_informative.ipynb  analyze_runs_spheres-calinsky.ipynb
cohirf/: batch_harder.ipynb  metrics.py
cohirf/experiment/: blob_clustering_experiment.py  classification_clustering_experiment.py  clustering_experiment.py  csv_clustering_experiment.py  csv_data.csv  custom_clustering_experiment.py  gaussian_clustering_experiment.py  hpo_blob_clustering_experiment.py  hpo_classification_clustering_experiment.py  hpo_clustering_experiment.py  hpo_csv_clustering_experiment.py  hpo_custom_clustering_experiment.py  hpo_gaussian_clustering_experiment.py  open_ml_clustering_experiment.py  (+6 more)
development_notebooks/: batch-dev.ipynb  batch_harder.ipynb  cifar-100.ipynb  criteo-up.ipynb  csv.ipynb  embed-wine.ipynb  gaussian_noise_intra.ipynb  interactive_run.ipynb  kdd-99.ipynb  mixcohirf_example.ipynb  non_informatives_std_random.ipynb  real.ipynb  samples_hypercube.ipynb  save_sphere_viz.ipynb  sphere_radius.ipynb  spheres.ipynb  spotify.ipynb  synthetic_3d_distance.ipynb  test-wine.ipynb  teste-gensim.ipynb  upload_dataset.ipynb  user_behavior.ipynb
recursive_clustering/: clique.py  estimator.py  irfllrr.py  kmeansproj.py  openml_datasets.csv  proclus.py  scsrgf.py
results/: analyze_runs.ipynb  analyze_runs_blob.ipynb  analyze_runs_classif.ipynb  analyze_runs_classif_outlier.ipynb  analyze_runs_openml.ipynb  draw_graph.ipynb
tests/: test_batch_cohirf.py  test_cohirf.py  test_cohirf_parents.py  test_davies_bouldin_score.py
(+70 files in other folders)
